--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
         <h1 class="text-center">JavaScript Quiz!</h1>
         <div class="d-flex justify-content-between">
             <p class="m-2" id="">Highscore:</p>
-            <p class="m-2" id="timer">Timer:</p>
+            <p class="m-2" id="timer"></p>
         </div>
-        <p class="" id="question">""</p>
-        <p class="" id="answers">""</p>
+        <p class="p-3" id="question">""</p>
+        <p class="p-3" id="answerA">""</p>
+        <p class="p-3" id="answerB">""</p>
+        <p class="p-3" id="answerC">""</p>
+        <p class="p-3" id="answerD">""</p>
         
         <div class="d-flex justify-content-evenly m-5">
-            <button id="backButton" class="border border-black m-3 p-3 rounded-4">Go Back</button>
+        
             <button id="submitButton" class="border border-black m-3 p-3 rounded-4">Submit</button>
         </div>
     </div>
