updated questions and got the points and timer fixed

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <div class="border border-black m-5 p-5 rounded-4 bg-secondary">
         <h1 class="text-center">JavaScript Quiz!</h1>
         <div class="d-flex justify-content-between">
-            <h3 class="m-2" id="">Highscore:</h3>
+            <h3 class="m-2" id="score"></h3>
             <h3 class="m-2" id="timer"></h3>
         </div>
         <h5 class="p-3" id="question">""</h5>
         <div class="">
-        <button class="p-3 border-0 d-block btn btn-secondary btn-lg" id="answerA">""</button>
-        <button class="p-3 border-0 d-block btn btn-secondary btn-lg" id="answerB">""</button>
-        <button class="p-3 border-0 d-block btn btn-secondary btn-lg" id="answerC">""</button>
-        <button class="p-3 border-0 d-block btn btn-secondary btn-lg" id="answerD">""</button>
-        </div>
+        <button class="p-3 border-0 d-block btn btn-secondary btn-lg" id="answerA" data-answer="A">""</button>
+        <button class="p-3 border-0 d-block btn btn-secondary btn-lg" id="answerB" data-answer="B">""</button>
+        <button class="p-3 border-0 d-block btn btn-secondary btn-lg" id="answerC" data-answer="C">""</button>
+        <button class="p-3 border-0 d-block btn btn-secondary btn-lg" id="answerD" data-answer="D">""</button>
+        </div> 
         <div class="d-flex justify-content-evenly m-5">
             <button id="submitButton" class="border border-white  btn btn-secondary btn-lg">Submit</button>
         </div>
