--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 
 <body class="m-5 bg-light text-white">
-    <div class="border border-black m-5 p-5 rounded-4 bg-secondary">
+    <div class="border border-black m-5 p-5 rounded-4 bg-secondary" id="start">
+        <h1>JavaScript Quiz!</h1>
+        <p>This quiz has 5 questions. For every correct answer, you will gain 10 points. For every incorrect answer,
+            you will gain 0 points and lose 15 seconds off of your timer.</p>
+        <button class="p-3 border-1 border-white d-block btn btn-secondary btn-lg" id="btnStart">Start</button>
+
+    </div>
+    <div class="border border-black m-5 p-5 rounded-4 bg-secondary d-none" id="quiz">
         <h1 class="text-center">JavaScript Quiz!</h1>
         <div class="d-flex justify-content-between">
             <h3 class="m-2" id="score"></h3>
@@ -17,14 +24,17 @@
         </div>
         <h5 class="p-3" id="question">""</h5>
         <div class="">
-        <button class="p-3 border-0 d-block btn btn-secondary btn-lg" id="answerA" data-answer="A">""</button>
-        <button class="p-3 border-0 d-block btn btn-secondary btn-lg" id="answerB" data-answer="B">""</button>
-        <button class="p-3 border-0 d-block btn btn-secondary btn-lg" id="answerC" data-answer="C">""</button>
-        <button class="p-3 border-0 d-block btn btn-secondary btn-lg" id="answerD" data-answer="D">""</button>
-        </div> 
+            <button class="p-3 border-0 d-block btn btn-secondary btn-lg" id="answerA" data-answer="A">""</button>
+            <button class="p-3 border-0 d-block btn btn-secondary btn-lg" id="answerB" data-answer="B">""</button>
+            <button class="p-3 border-0 d-block btn btn-secondary btn-lg" id="answerC" data-answer="C">""</button>
+            <button class="p-3 border-0 d-block btn btn-secondary btn-lg" id="answerD" data-answer="D">""</button>
+        </div>
         <div class="d-flex justify-content-evenly m-5">
             <button id="submitButton" class="border border-white  btn btn-secondary btn-lg">Submit</button>
         </div>
+    </div>
+    <div class="border border-black m-5 p-5 rounded-4 bg-secondary d-none" id="highscore">
+
     </div>
     <script src="script.js"></script>
 </body>
